Add maze corner detection

--- a/walls.ipynb
+++ b/walls.ipynb
@@ -70,98 +70,12 @@
    },
    "outputs": [],
    "source": [
-    "h_img, s_img, v_img = hsv_img[:,:,0], hsv_img[:,:,1], hsv_img[:,:,2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.imshow(h_img)\n",
-    "plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.imshow(s_img)\n",
-    "plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.imshow(v_img)\n",
-    "plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "slider_lower = widgets.IntSlider(description='Lower', min=0, max=255, step=1)\n",
-    "slider_upper = widgets.IntSlider(description='Upper', min=0, max=255, step=1)\n",
-    "display(widgets.VBox([slider_lower, slider_upper]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "def masker(mask):\n",
     "    kernel = np.ones((5,5),np.uint8)\n",
     "    mask2 = cv.morphologyEx(mask, cv.MORPH_OPEN, kernel)\n",
     "    mask3 = cv.morphologyEx(mask2, cv.MORPH_CLOSE, kernel)\n",
     "    masks = np.hstack((mask, mask2, mask3))\n",
     "    return masks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def on_slider_change(_):\n",
-    "    mask = cv.inRange(hsv_img, (0, 0, slider_lower.value), (0, 0, slider_upper.value))\n",
-    "    masker(mask)\n",
-    "    #print(slider_lower.value, slider_upper.value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "slider_lower.observe(on_slider_change, 'value')\n",
-    "slider_upper.observe(on_slider_change, 'value')"
    ]
   },
   {
@@ -209,21 +123,15 @@
    },
    "outputs": [],
    "source": [
-    "blur_mask = cv.dilate(_mask, (15, 15), iterations=10)\n",
-    "#blur_mask = cv.blur(blur_mask, (15, 15))\n",
-    "plt.imshow(blur_mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "AREA_TOP = (0, 100)\n",
+    "AREA_BOTTOM = (350, 450) # based on ratio\n",
+    "AREA_LEFT = (200, 300)\n",
+    "AREA_RIGHT = (550, 650)\n",
+    "\n",
     "ORIGIN_TOP_LEFT = (0, 0)\n",
+    "ORIGIN_TOP_RIGHT = (0, 199)\n",
     "ORIGIN_BOTTOM_LEFT = (199, 0)\n",
+    "ORIGIN_BOTTOM_RIGHT = (199, 199)\n",
     "\n",
     "def roi_corner(mask, area_x, area_y, origin):\n",
     "    roi_mask = mask[area_x[0]:area_x[1], area_y[0]:area_y[1]]\n",
@@ -236,7 +144,7 @@
     "    roi_index = np.argmin(roi_distances)\n",
     "    roi_point = roi_points[roi_index]\n",
     "\n",
-    "    return (roi_point[0] + area_x[0], roi_point[1] + area_y[1])"
+    "    return (roi_point[0] + area_x[0], roi_point[1] + area_y[0])"
    ]
   },
   {
@@ -247,7 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "roi_corner(_mask, (0, 200), (200, 400), ORIGIN_BOTTOM_LEFT)"
+    "top_left_corner = roi_corner(_mask, AREA_TOP, AREA_LEFT, ORIGIN_TOP_LEFT)\n",
+    "img[top_left_corner[0]-10:top_left_corner[0]+10, top_left_corner[1]-10:top_left_corner[1]+10] = [255, 0, 0]"
    ]
   },
   {
@@ -258,10 +167,8 @@
    },
    "outputs": [],
    "source": [
-    "top_left_mask = blur_mask[0:200, 200:400]\n",
-    "plt.imshow(top_left_mask)\n",
-    "top_left_mask = np.float32(top_left_mask)\n",
-    "top_left_corners = cv.cornerHarris(top_left_mask, blockSize=3, ksize=3, k=0.05)"
+    "top_right_corner = roi_corner(_mask, AREA_TOP, AREA_RIGHT, ORIGIN_TOP_RIGHT)\n",
+    "img[top_right_corner[0]-10:top_right_corner[0]+10, top_right_corner[1]-10:top_right_corner[1]+10] = [255, 0, 0]"
    ]
   },
   {
@@ -272,14 +179,8 @@
    },
    "outputs": [],
    "source": [
-    "top_left_point = np.argwhere(top_left_corners > 0.025 * top_left_corners.max())[0]\n",
-    "\n",
-    "print(top_left_point)\n",
-    "\n",
-    "top_left_img = img[0:200, 200:400]\n",
-    "top_left_img[top_left_point[0], top_left_point[1]] = [255, 0, 0]\n",
-    "\n",
-    "plt.imshow(top_left_img)"
+    "bottom_left_corner = roi_corner(_mask, AREA_BOTTOM, AREA_LEFT, ORIGIN_BOTTOM_LEFT)\n",
+    "img[bottom_left_corner[0]-10:bottom_left_corner[0]+10, bottom_left_corner[1]-10:bottom_left_corner[1]+10] = [255, 0, 0]"
    ]
   },
   {
@@ -290,10 +191,8 @@
    },
    "outputs": [],
    "source": [
-    "bottom_left_mask = _mask[400:600, 200:400]\n",
-    "plt.imshow(bottom_left_mask)\n",
-    "bottom_left_mask = np.float32(bottom_left_mask)\n",
-    "bottom_left_corners = cv.cornerHarris(bottom_left_mask, blockSize=3, ksize=3, k=0.05)"
+    "bottom_right_corner = roi_corner(_mask, AREA_BOTTOM, AREA_RIGHT, ORIGIN_BOTTOM_RIGHT)\n",
+    "img[bottom_right_corner[0]-10:bottom_right_corner[0]+10, bottom_right_corner[1]-10:bottom_right_corner[1]+10] = [255, 0, 0]"
    ]
   },
   {
@@ -304,45 +203,6 @@
    },
    "outputs": [],
    "source": [
-    "bottom_left_point = np.argwhere(bottom_left_corners > 0.025 * bottom_left_corners.max())\n",
-    "\n",
-    "bottom_left_distances = np.array([np.linalg.norm((199, 0) - p) for p in bottom_left_point])\n",
-    "bottom_left_index = np.argmin(bottom_left_distances)\n",
-    "bottom_left_tacka = bottom_left_point[bottom_left_index]\n",
-    "\n",
-    "bottom_left_point_swap = np.swapaxes(bottom_left_point, 0, 1)\n",
-    "\n",
-    "bottom_left_img = img[400:600, 200:400]\n",
-    "bottom_left_img[bottom_left_tacka[0], bottom_left_tacka[1]] = [255, 0, 0]\n",
-    "\n",
-    "plt.imshow(bottom_left_img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "float_mask = np.float32(blur_mask)\n",
-    "corners = cv.cornerHarris(float_mask, blockSize=3, ksize=3, k=0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "kernel = np.ones((7,7), np.uint8)\n",
-    "corners_dilated = cv.dilate(corners, kernel, iterations= 2)\n",
-    "\n",
-    "img[corners_dilated > 0.025 * corners_dilated.max()] = [255, 0, 0]\n",
-    "\n",
     "plt.imshow(img)"
    ]
   }
