Add perspective transoformation

--- a/walls.ipynb
+++ b/walls.ipynb
@@ -205,6 +205,52 @@
    "source": [
     "plt.imshow(img)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "old_perspective_points = np.float32([top_left_corner, bottom_left_corner, top_right_corner, bottom_right_corner])\n",
+    "new_perspective_points = np.float32([[0, 0], [300, 0], [0, 300], [300, 300]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "perspective_matrix = cv.getPerspectiveTransform(old_perspective_points, new_perspective_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "height, width = img.shape[:2]\n",
+    "fixed_perspective_img = cv.warpPerspective(img, perspective_matrix, (300, 300))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(fixed_perspective_img)"
+   ]
   }
  ],
  "metadata": {
