Fix finding corners and perspective transform

--- a/walls.ipynb
+++ b/walls.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "img = cv.imread('./lab_01.jpg')\n",
+    "img = cv.imread('./walls.jpg')\n",
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
     "(img_height, img_width, _) = img.shape\n",
     "img_ratio = 1000 / img_width\n",
@@ -134,7 +134,7 @@
     "ORIGIN_BOTTOM_RIGHT = (199, 199)\n",
     "\n",
     "def roi_corner(mask, area_x, area_y, origin):\n",
-    "    roi_mask = mask[area_x[0]:area_x[1], area_y[0]:area_y[1]]\n",
+    "    roi_mask = mask[area_y[0]:area_y[1], area_x[0]:area_x[1]]\n",
     "    roi_mask = np.float32(roi_mask)\n",
     "    roi_corners = cv.cornerHarris(roi_mask, blockSize=3, ksize=3, k=0.05)\n",
     "    \n",
@@ -144,7 +144,7 @@
     "    roi_index = np.argmin(roi_distances)\n",
     "    roi_point = roi_points[roi_index]\n",
     "\n",
-    "    return (roi_point[0] + area_x[0], roi_point[1] + area_y[0])"
+    "    return (roi_point[1] + area_x[0], roi_point[0] + area_y[0])"
    ]
   },
   {
@@ -155,8 +155,7 @@
    },
    "outputs": [],
    "source": [
-    "top_left_corner = roi_corner(_mask, AREA_TOP, AREA_LEFT, ORIGIN_TOP_LEFT)\n",
-    "img[top_left_corner[0]-10:top_left_corner[0]+10, top_left_corner[1]-10:top_left_corner[1]+10] = [255, 0, 0]"
+    "img_dbg = img.copy()"
    ]
   },
   {
@@ -167,8 +166,9 @@
    },
    "outputs": [],
    "source": [
-    "top_right_corner = roi_corner(_mask, AREA_TOP, AREA_RIGHT, ORIGIN_TOP_RIGHT)\n",
-    "img[top_right_corner[0]-10:top_right_corner[0]+10, top_right_corner[1]-10:top_right_corner[1]+10] = [255, 0, 0]"
+    "top_left_corner = roi_corner(_mask, AREA_LEFT, AREA_TOP, ORIGIN_TOP_LEFT)\n",
+    "print(top_left_corner)\n",
+    "img_dbg[top_left_corner[1]-10:top_left_corner[1]+10, top_left_corner[0]-10:top_left_corner[0]+10] = [255, 0, 0]"
    ]
   },
   {
@@ -179,8 +179,8 @@
    },
    "outputs": [],
    "source": [
-    "bottom_left_corner = roi_corner(_mask, AREA_BOTTOM, AREA_LEFT, ORIGIN_BOTTOM_LEFT)\n",
-    "img[bottom_left_corner[0]-10:bottom_left_corner[0]+10, bottom_left_corner[1]-10:bottom_left_corner[1]+10] = [255, 0, 0]"
+    "top_right_corner = roi_corner(_mask, AREA_RIGHT, AREA_TOP, ORIGIN_TOP_RIGHT)\n",
+    "img_dbg[top_right_corner[1]-10:top_right_corner[1]+10, top_right_corner[0]-10:top_right_corner[0]+10] = [0, 255, 0]"
    ]
   },
   {
@@ -191,8 +191,8 @@
    },
    "outputs": [],
    "source": [
-    "bottom_right_corner = roi_corner(_mask, AREA_BOTTOM, AREA_RIGHT, ORIGIN_BOTTOM_RIGHT)\n",
-    "img[bottom_right_corner[0]-10:bottom_right_corner[0]+10, bottom_right_corner[1]-10:bottom_right_corner[1]+10] = [255, 0, 0]"
+    "bottom_left_corner = roi_corner(_mask, AREA_LEFT, AREA_BOTTOM, ORIGIN_BOTTOM_LEFT)\n",
+    "img_dbg[bottom_left_corner[1]-10:bottom_left_corner[1]+10, bottom_left_corner[0]-10:bottom_left_corner[0]+10] = [0, 0, 255]"
    ]
   },
   {
@@ -203,7 +203,8 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(img)"
+    "bottom_right_corner = roi_corner(_mask, AREA_RIGHT, AREA_BOTTOM, ORIGIN_BOTTOM_RIGHT)\n",
+    "img_dbg[bottom_right_corner[1]-10:bottom_right_corner[1]+10, bottom_right_corner[0]-10:bottom_right_corner[0]+10] = [0, 255, 255]"
    ]
   },
   {
@@ -214,8 +215,37 @@
    },
    "outputs": [],
    "source": [
-    "old_perspective_points = np.float32([top_left_corner, bottom_left_corner, top_right_corner, bottom_right_corner])\n",
-    "new_perspective_points = np.float32([[0, 0], [300, 0], [0, 300], [300, 300]])"
+    "plt.imshow(img_dbg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(np.array(top_left_corner), bottom_left_corner, top_right_corner, bottom_right_corner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "old_perspective_points = np.float32([\n",
+    "    np.array(top_left_corner),\n",
+    "    np.array(bottom_left_corner),\n",
+    "    np.array(top_right_corner),\n",
+    "    np.array(bottom_right_corner)\n",
+    "])\n",
+    "new_perspective_points = np.float32([[0, 0], [0, 300], [300, 0], [300, 300]])\n",
+    "print(old_perspective_points)\n",
+    "print(new_perspective_points)"
    ]
   },
   {
