--- a/walls.ipynb
+++ b/walls.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load image, resize and convert"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -30,7 +37,8 @@
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
     "(img_height, img_width, _) = img.shape\n",
     "img_ratio = 1000 / img_width\n",
-    "img = cv.resize(img, (1000, int(img_height * img_ratio)), interpolation=cv.INTER_AREA)"
+    "img = cv.resize(img, (1000, int(img_height * img_ratio)), interpolation=cv.INTER_AREA)\n",
+    "print('h: {}, w: {}'.format(int(img_height * img_ratio), 1000))"
    ]
   },
   {
@@ -51,6 +59,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert from rgb to hsv, it's easier to mask it that way"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -60,6 +75,72 @@
    "outputs": [],
    "source": [
     "hsv_img = cv.cvtColor(img, cv.COLOR_RGB2HSV)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot histograms of color spaces, both rgb and hsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for i, col in enumerate(('r', 'g', 'b')):\n",
+    "    hist_color_rgb = cv.calcHist([img], [i], None, [256], [0, 256])\n",
+    "    plt.plot(hist_color_rgb, color=col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for i, col in enumerate(('r', 'g', 'b')):\n",
+    "    hist_color_hsv = cv.calcHist([hsv_img], [i], None, [256], [0, 256])\n",
+    "    plt.plot(hist_color_hsv, color=col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Color tweaking\n",
+    "\n",
+    "Find parameters for extracting the mask (high and low colors for range limits) using sliders and looking for the best match."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sliders_low = [widgets.IntSlider(value=0, min=0, max=180 if desc == 'h' else 255, step=1, description=desc) for desc in ('h', 's', 'v')]\n",
+    "sliders_high = [widgets.IntSlider(value=0, min=0, max=180 if desc == 'h' else 255, step=1, description=desc) for desc in ('h', 's', 'v')]\n",
+    "vbox = widgets.VBox([\n",
+    "    widgets.HBox(sliders_low),\n",
+    "    widgets.HBox(sliders_high),\n",
+    "])\n",
+    "vbox"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Masking function. It diretly modifies the parameter. There is no need to use the return value"
    ]
   },
   {
@@ -79,6 +160,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function that is called when slider value changes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -86,10 +174,45 @@
    },
    "outputs": [],
    "source": [
+    "def on_hsv_change(_):\n",
+    "    _mask = cv.inRange(\n",
+    "        hsv_img,\n",
+    "        (int(sliders_low[0].value), int(sliders_low[1].value), int(sliders_low[2].value)),\n",
+    "        (int(sliders_high[0].value), int(sliders_high[1].value), int(sliders_high[2].value)),\n",
+    "    )\n",
+    "    masked = masker(_mask)\n",
+    "    plt.imshow(_mask)\n",
+    "\n",
+    "[slider.observe(on_hsv_change) for slider in sliders_low + sliders_high]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Create the mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "WHITE_LOWER = (100, 0, 200)\n",
+    "WHITE_UPPER = (150, 50, 255)\n",
+    "\n",
+    "BLUE_LOWER = (100, 190, 150)\n",
+    "BLUE_UPPER = (110, 255, 220)\n",
+    "\n",
     "_mask = cv.inRange(\n",
     "    hsv_img,\n",
-    "    (100, 0, 200),\n",
-    "    (150, 50, 255)\n",
+    "    BLUE_LOWER,\n",
+    "    BLUE_UPPER\n",
     ")"
    ]
   },
@@ -116,6 +239,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ROI corner finder\n",
+    "\n",
+    "Find maze corners in specific regions of interest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -125,8 +257,8 @@
    "source": [
     "AREA_TOP = (0, 100)\n",
     "AREA_BOTTOM = (350, 450) # based on ratio\n",
-    "AREA_LEFT = (200, 300)\n",
-    "AREA_RIGHT = (550, 650)\n",
+    "AREA_LEFT = (250, 350)\n",
+    "AREA_RIGHT = (675, 775)\n",
     "\n",
     "ORIGIN_TOP_LEFT = (0, 0)\n",
     "ORIGIN_TOP_RIGHT = (0, 199)\n",
@@ -145,6 +277,13 @@
     "    roi_point = roi_points[roi_index]\n",
     "\n",
     "    return (roi_point[1] + area_x[0], roi_point[0] + area_y[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot corners to a new image"
    ]
   },
   {
@@ -219,14 +358,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print(np.array(top_left_corner), bottom_left_corner, top_right_corner, bottom_right_corner)"
+    "# Fix perspective"
    ]
   },
   {
