code: Move logic to classes
* Move masking logic to class
* Move fixing perspective logic to class
* Move conversion logic to class
* Move finding corners to class
* Start work on map extraction

--- a/walls.ipynb
+++ b/walls.ipynb
@@ -13,8 +13,21 @@
     "# from google.colab.patches import cv2_imshow\n",
     "from matplotlib import pyplot as plt\n",
     "import ipywidgets as widgets\n",
+    "import image\n",
     "\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -62,25 +75,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convert from rgb to hsv, it's easier to mask it that way"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "xPJpWNePC9gP",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hsv_img = cv.cvtColor(img, cv.COLOR_RGB2HSV)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Plot histograms of color spaces, both rgb and hsv"
    ]
   },
@@ -105,6 +99,7 @@
    },
    "outputs": [],
    "source": [
+    "hsv_img = cv.cvtColor(img, cv.COLOR_RGB2HSV)\n",
     "for i, col in enumerate(('r', 'g', 'b')):\n",
     "    hist_color_hsv = cv.calcHist([hsv_img], [i], None, [256], [0, 256])\n",
     "    plt.plot(hist_color_hsv, color=col)"
@@ -144,22 +139,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def masker(mask):\n",
-    "    kernel = np.ones((5,5),np.uint8)\n",
-    "    mask2 = cv.morphologyEx(mask, cv.MORPH_OPEN, kernel)\n",
-    "    mask3 = cv.morphologyEx(mask2, cv.MORPH_CLOSE, kernel)\n",
-    "    masks = np.hstack((mask, mask2, mask3))\n",
-    "    return masks"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,16 +153,37 @@
    },
    "outputs": [],
    "source": [
-    "def on_hsv_change(_):\n",
-    "    _mask = cv.inRange(\n",
-    "        hsv_img,\n",
-    "        (int(sliders_low[0].value), int(sliders_low[1].value), int(sliders_low[2].value)),\n",
-    "        (int(sliders_high[0].value), int(sliders_high[1].value), int(sliders_high[2].value)),\n",
-    "    )\n",
-    "    masked = masker(_mask)\n",
-    "    plt.imshow(_mask)\n",
-    "\n",
-    "[slider.observe(on_hsv_change) for slider in sliders_low + sliders_high]"
+    "def make_on_change(image):\n",
+    "    def on_hsv_change(_):\n",
+    "        _mask = cv.inRange(\n",
+    "            image,\n",
+    "            (int(sliders_low[0].value), int(sliders_low[1].value), int(sliders_low[2].value)),\n",
+    "            (int(sliders_high[0].value), int(sliders_high[1].value), int(sliders_high[2].value)),\n",
+    "        )\n",
+    "        plt.imshow(_mask)\n",
+    "    return on_hsv_change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "make_on_change(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "[slider.observe(make_on_change(hsv_img)) for slider in sliders_low + sliders_high]"
    ]
   },
   {
@@ -207,35 +207,7 @@
     "WHITE_UPPER = (150, 50, 255)\n",
     "\n",
     "BLUE_LOWER = (100, 190, 150)\n",
-    "BLUE_UPPER = (110, 255, 220)\n",
-    "\n",
-    "_mask = cv.inRange(\n",
-    "    hsv_img,\n",
-    "    BLUE_LOWER,\n",
-    "    BLUE_UPPER\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "masked = masker(_mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.imshow(_mask)"
+    "BLUE_UPPER = (110, 255, 220)"
    ]
   },
   {
@@ -248,42 +220,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "AREA_TOP = (0, 100)\n",
-    "AREA_BOTTOM = (350, 450) # based on ratio\n",
-    "AREA_LEFT = (250, 350)\n",
-    "AREA_RIGHT = (675, 775)\n",
-    "\n",
-    "ORIGIN_TOP_LEFT = (0, 0)\n",
-    "ORIGIN_TOP_RIGHT = (0, 199)\n",
-    "ORIGIN_BOTTOM_LEFT = (199, 0)\n",
-    "ORIGIN_BOTTOM_RIGHT = (199, 199)\n",
-    "\n",
-    "def roi_corner(mask, area_x, area_y, origin):\n",
-    "    roi_mask = mask[area_y[0]:area_y[1], area_x[0]:area_x[1]]\n",
-    "    roi_mask = np.float32(roi_mask)\n",
-    "    roi_corners = cv.cornerHarris(roi_mask, blockSize=3, ksize=3, k=0.05)\n",
-    "    \n",
-    "    roi_points = np.argwhere(roi_corners > 0.025 * roi_corners.max())\n",
-    "\n",
-    "    roi_distances = np.array([np.linalg.norm(origin - p) for p in roi_points])\n",
-    "    roi_index = np.argmin(roi_distances)\n",
-    "    roi_point = roi_points[roi_index]\n",
-    "\n",
-    "    return (roi_point[1] + area_x[0], roi_point[0] + area_y[0])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot corners to a new image"
+    " method reference; to index tPlot corners to a new image"
    ]
   },
   {
@@ -294,7 +234,14 @@
    },
    "outputs": [],
    "source": [
-    "img_dbg = img.copy()"
+    "image_class = image.Image(img)\n",
+    "image_class.set_areas(\n",
+    "    image.Area(0, 100),\n",
+    "    image.Area(350, 450),\n",
+    "    image.Area(250, 350),\n",
+    "    image.Area(675, 775),\n",
+    ")\n",
+    "image_class.set_origin_points((0, 99), (0, 99))"
    ]
   },
   {
@@ -305,9 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "top_left_corner = roi_corner(_mask, AREA_LEFT, AREA_TOP, ORIGIN_TOP_LEFT)\n",
-    "print(top_left_corner)\n",
-    "img_dbg[top_left_corner[1]-10:top_left_corner[1]+10, top_left_corner[0]-10:top_left_corner[0]+10] = [255, 0, 0]"
+    "plt.imshow(image_class.img)"
    ]
   },
   {
@@ -318,8 +263,7 @@
    },
    "outputs": [],
    "source": [
-    "top_right_corner = roi_corner(_mask, AREA_RIGHT, AREA_TOP, ORIGIN_TOP_RIGHT)\n",
-    "img_dbg[top_right_corner[1]-10:top_right_corner[1]+10, top_right_corner[0]-10:top_right_corner[0]+10] = [0, 255, 0]"
+    "hsv_class = image_class.rgb_to_hsv()"
    ]
   },
   {
@@ -330,8 +274,7 @@
    },
    "outputs": [],
    "source": [
-    "bottom_left_corner = roi_corner(_mask, AREA_LEFT, AREA_BOTTOM, ORIGIN_BOTTOM_LEFT)\n",
-    "img_dbg[bottom_left_corner[1]-10:bottom_left_corner[1]+10, bottom_left_corner[0]-10:bottom_left_corner[0]+10] = [0, 0, 255]"
+    "plt.imshow(hsv_class.img)"
    ]
   },
   {
@@ -342,8 +285,7 @@
    },
    "outputs": [],
    "source": [
-    "bottom_right_corner = roi_corner(_mask, AREA_RIGHT, AREA_BOTTOM, ORIGIN_BOTTOM_RIGHT)\n",
-    "img_dbg[bottom_right_corner[1]-10:bottom_right_corner[1]+10, bottom_right_corner[0]-10:bottom_right_corner[0]+10] = [0, 255, 255]"
+    "mask_class = hsv_class.make_mask(BLUE_LOWER, BLUE_UPPER)"
    ]
   },
   {
@@ -354,14 +296,137 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(img_dbg)"
+    "plt.imshow(mask_class.img)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "corners = mask_class.find_corners()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "corners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "debug_class = image_class.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "debug_class.paint_corners(corners)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(debug_class.img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fix1_class = image_class.fix_perspective(corners)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fix1_class.set_areas(\n",
+    "    image.Area(0, 50),\n",
+    "    image.Area(250, 300),\n",
+    "    image.Area(0, 50),\n",
+    "    image.Area(250, 300),\n",
+    ")\n",
+    "fix1_class.set_origin_points(\n",
+    "    (0, 49),\n",
+    "    (0, 49),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(fix1_class.img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "hsv_fix1_class = fix1_class.rgb_to_hsv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "hsv_fix1_on_change = make_on_change(hsv_fix1_class.img)\n",
+    "[slider.observe(hsv_fix1_on_change) for slider in sliders_low + sliders_high]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Fix perspective"
+    "YELLOW_LOWER = (20, 128, 180)\n",
+    "YELLOW_UPPER = (50, 255, 255)"
    ]
   },
   {
@@ -372,15 +437,7 @@
    },
    "outputs": [],
    "source": [
-    "old_perspective_points = np.float32([\n",
-    "    np.array(top_left_corner),\n",
-    "    np.array(bottom_left_corner),\n",
-    "    np.array(top_right_corner),\n",
-    "    np.array(bottom_right_corner)\n",
-    "])\n",
-    "new_perspective_points = np.float32([[0, 0], [0, 300], [300, 0], [300, 300]])\n",
-    "print(old_perspective_points)\n",
-    "print(new_perspective_points)"
+    "mask_fix1_class = hsv_fix1_class.make_mask(YELLOW_LOWER, YELLOW_UPPER)"
    ]
   },
   {
@@ -391,7 +448,7 @@
    },
    "outputs": [],
    "source": [
-    "perspective_matrix = cv.getPerspectiveTransform(old_perspective_points, new_perspective_points)"
+    "plt.imshow(mask_fix1_class.img)"
    ]
   },
   {
@@ -402,8 +459,7 @@
    },
    "outputs": [],
    "source": [
-    "height, width = img.shape[:2]\n",
-    "fixed_perspective_img = cv.warpPerspective(img, perspective_matrix, (300, 300))"
+    "fix1_corners = mask_fix1_class.find_corners()"
    ]
   },
   {
@@ -414,7 +470,58 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(fixed_perspective_img)"
+    "fix2_class = fix1_class.fix_perspective(fix1_corners)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(fix2_class.img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# WIP: Not for use\n",
+    "crop_img = fix2_class.img[11*1:11*2-1, 10*1:10*2-1]\n",
+    "kmeans_img = np.float32(crop_img)\n",
+    "criteria = (cv.TERM_CRITERIA_EPS + cv.TERM_CRITERIA_MAX_ITER, 10, 1.0)\n",
+    "n_clusters = 2\n",
+    "ret,label,center=cv.kmeans(kmeans_img,n_clusters,None,criteria,10,cv.KMEANS_RANDOM_CENTERS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "center = np.uint8(center)\n",
+    "res = center[label.flatten()]\n",
+    "res2 = res.reshape((crop_img.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(res2)"
    ]
   }
  ],
