code: Change image filename

--- a/walls.ipynb
+++ b/walls.ipynb
@@ -46,7 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "img = cv.imread('./walls.jpg')\n",
+    "img = cv.imread('./test_custom.jpg')\n",
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
     "(img_height, img_width, _) = img.shape\n",
     "img_ratio = 1000 / img_width\n",
