--- a/walls.ipynb
+++ b/walls.ipynb
@@ -15,7 +15,9 @@
     "import ipywidgets as widgets\n",
     "import image\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import glob"
    ]
   },
   {
@@ -46,12 +48,13 @@
    },
    "outputs": [],
    "source": [
-    "img = cv.imread('./test_custom.jpg')\n",
+    "img = cv.imread('./images/fancy_custom.jpg')\n",
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
     "(img_height, img_width, _) = img.shape\n",
     "img_ratio = 1000 / img_width\n",
-    "img = cv.resize(img, (1000, int(img_height * img_ratio)), interpolation=cv.INTER_AREA)\n",
-    "print('h: {}, w: {}'.format(int(img_height * img_ratio), 1000))"
+    "#img = cv.resize(img, (1000, int(img_height * img_ratio)), interpolation=cv.INTER_AREA)\n",
+    "#print('h: {}, w: {}'.format(int(img_height * img_ratio), 1000))\n",
+    "print('h: {}, w: {}'.format(img_height, img_width))"
    ]
   },
   {
@@ -69,6 +72,75 @@
    "outputs": [],
    "source": [
     "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "calibration = np.load('calib.npz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mtx = calibration['mtx']\n",
+    "dist = calibration['dist']\n",
+    "rvecs = calibration['rvecs']\n",
+    "tvecs = calibration['tvecs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "h, w = img.shape[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "newCameraMtx, roi = cv.getOptimalNewCameraMatrix(mtx, dist, (w, h), 1, (w, h))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "undistortedImg = cv.undistort(img, mtx, dist, None, newCameraMtx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(undistortedImg)"
    ]
   },
   {
@@ -99,7 +171,7 @@
    },
    "outputs": [],
    "source": [
-    "hsv_img = cv.cvtColor(img, cv.COLOR_RGB2HSV)\n",
+    "hsv_img = cv.cvtColor(undistortedImg, cv.COLOR_RGB2HSV)\n",
     "for i, col in enumerate(('r', 'g', 'b')):\n",
     "    hist_color_hsv = cv.calcHist([hsv_img], [i], None, [256], [0, 256])\n",
     "    plt.plot(hist_color_hsv, color=col)"
@@ -234,12 +306,12 @@
    },
    "outputs": [],
    "source": [
-    "image_class = image.Image(img)\n",
+    "image_class = image.Image(undistortedImg)\n",
     "image_class.set_areas(\n",
-    "    image.Area(0, 100),\n",
+    "    image.Area(50, 150),\n",
     "    image.Area(350, 450),\n",
-    "    image.Area(250, 350),\n",
-    "    image.Area(675, 775),\n",
+    "    image.Area(150, 250),\n",
+    "    image.Area(450, 550),\n",
     ")\n",
     "image_class.set_origin_points((0, 99), (0, 99))"
    ]
@@ -285,7 +357,19 @@
    },
    "outputs": [],
    "source": [
-    "mask_class = hsv_class.make_mask(BLUE_LOWER, BLUE_UPPER)"
+    "CYAN_LOWER = (85, 205, 190)\n",
+    "CYAN_UPPER = (95, 255, 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mask_class = hsv_class.make_mask(CYAN_LOWER, CYAN_UPPER)"
    ]
   },
   {
@@ -362,7 +446,7 @@
    },
    "outputs": [],
    "source": [
-    "fix1_class = image_class.fix_perspective(corners)"
+    "fix1_class = image_class.fix_perspective(corners, (10, 10), (24, 24))"
    ]
   },
   {
@@ -404,7 +488,10 @@
    },
    "outputs": [],
    "source": [
-    "hsv_fix1_class = fix1_class.rgb_to_hsv()"
+    "kmeans_whole = np.float32(fix1_class.img.reshape((-1, 3)))\n",
+    "criteria = (cv.TERM_CRITERIA_EPS + cv.TERM_CRITERIA_MAX_ITER, 10, 1.0)\n",
+    "n_clusters = 6\n",
+    "ret, label, center = cv.kmeans(kmeans_whole, n_clusters, None, criteria, 10, cv.KMEANS_RANDOM_CENTERS)"
    ]
   },
   {
@@ -415,18 +502,9 @@
    },
    "outputs": [],
    "source": [
-    "hsv_fix1_on_change = make_on_change(hsv_fix1_class.img)\n",
-    "[slider.observe(hsv_fix1_on_change) for slider in sliders_low + sliders_high]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "YELLOW_LOWER = (20, 128, 180)\n",
-    "YELLOW_UPPER = (50, 255, 255)"
+    "center = np.uint8(center)\n",
+    "res = center[label.flatten()]\n",
+    "res2 = res.reshape((fix1_class.img.shape))"
    ]
   },
   {
@@ -437,51 +515,7 @@
    },
    "outputs": [],
    "source": [
-    "mask_fix1_class = hsv_fix1_class.make_mask(YELLOW_LOWER, YELLOW_UPPER)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.imshow(mask_fix1_class.img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fix1_corners = mask_fix1_class.find_corners()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fix2_class = fix1_class.fix_perspective(fix1_corners)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.imshow(fix2_class.img)"
+    "plt.imshow(res2)"
    ]
   },
   {
@@ -493,8 +527,8 @@
    "outputs": [],
    "source": [
     "# WIP: Not for use\n",
-    "crop_img = fix2_class.img[11*1:11*2-1, 10*1:10*2-1]\n",
-    "kmeans_img = np.float32(crop_img)\n",
+    "crop_img = fix1_class.img[10*1:10*2-1, 10*2:10*3-1]\n",
+    "kmeans_img = np.float32(crop_img.reshape((-1, 3)))\n",
     "criteria = (cv.TERM_CRITERIA_EPS + cv.TERM_CRITERIA_MAX_ITER, 10, 1.0)\n",
     "n_clusters = 2\n",
     "ret,label,center=cv.kmeans(kmeans_img,n_clusters,None,criteria,10,cv.KMEANS_RANDOM_CENTERS)"
@@ -511,6 +545,17 @@
     "center = np.uint8(center)\n",
     "res = center[label.flatten()]\n",
     "res2 = res.reshape((crop_img.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "center"
    ]
   },
   {
