--- a/walls.ipynb
+++ b/walls.ipynb
@@ -14,6 +14,7 @@
     "from matplotlib import pyplot as plt\n",
     "import ipywidgets as widgets\n",
     "import image\n",
+    "import mapa\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -488,6 +489,52 @@
    },
    "outputs": [],
    "source": [
+    "fix1_mapa = mapa.Mapa.from_image(fix1_class.img, (10, 10), (24, 24))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "map_image = image.Image.from_map(fix1_mapa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(fix1_class.img.dtype, fix1_class.img.shape)\n",
+    "#print(type(map_image.img))\n",
+    "print(map_image.img.dtype, map_image.img.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(map_image.img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "kmeans_whole = np.float32(fix1_class.img.reshape((-1, 3)))\n",
     "criteria = (cv.TERM_CRITERIA_EPS + cv.TERM_CRITERIA_MAX_ITER, 10, 1.0)\n",
     "n_clusters = 6\n",
@@ -527,10 +574,10 @@
    "outputs": [],
    "source": [
     "# WIP: Not for use\n",
-    "crop_img = fix1_class.img[10*1:10*2-1, 10*2:10*3-1]\n",
+    "crop_img = fix1_class.img[10*2:10*3-1, 10*2:10*3-1]\n",
     "kmeans_img = np.float32(crop_img.reshape((-1, 3)))\n",
     "criteria = (cv.TERM_CRITERIA_EPS + cv.TERM_CRITERIA_MAX_ITER, 10, 1.0)\n",
-    "n_clusters = 2\n",
+    "n_clusters = 1\n",
     "ret,label,center=cv.kmeans(kmeans_img,n_clusters,None,criteria,10,cv.KMEANS_RANDOM_CENTERS)"
    ]
   },
