--- a/walls.ipynb
+++ b/walls.ipynb
@@ -50,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "img = cv.imread('./images/fancy_custom.jpg')\n",
+    "img = cv.imread('./images/walls.jpg')\n",
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
     "(img_height, img_width, _) = img.shape\n",
     "img_ratio = 1000 / img_width\n",
