code: Add cropping with white corners

--- a/walls.ipynb
+++ b/walls.ipynb
@@ -12,12 +12,13 @@
     "import cv2 as cv\n",
     "from matplotlib import pyplot as plt\n",
     "import ipywidgets as widgets\n",
-    "import image\n",
+    "from image import Image, OriginPoint\n",
     "import mapa\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "import glob"
+    "import glob\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -49,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "img = cv.imread('./images/walls.jpg')\n",
+    "img = cv.imread('./images/real01.jpg')\n",
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
     "(img_height, img_width, _) = img.shape\n",
     "img_ratio = 1000 / img_width\n",
@@ -281,8 +282,8 @@
    },
    "outputs": [],
    "source": [
-    "WHITE_LOWER = (100, 0, 200)\n",
-    "WHITE_UPPER = (150, 50, 255)\n",
+    "WHITE_LOWER = (0, 225, 225)\n",
+    "WHITE_UPPER = (180, 255, 255)\n",
     "\n",
     "BLUE_LOWER = (100, 190, 150)\n",
     "BLUE_UPPER = (110, 255, 220)"
@@ -333,6 +334,48 @@
    "outputs": [],
    "source": [
     "plt.imshow(image_class.img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "roi_top_left, roi_top_right, roi_bottom_left, roi_bottom_right = image_class.get_rois()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "_fig = plt.figure()\n",
+    "_fig.add_subplot(2, 2, 1)\n",
+    "plt.imshow(roi_top_left.img, cmap='gray', vmin=0, vmax=255)\n",
+    "_fig.add_subplot(2, 2, 2)\n",
+    "plt.imshow(roi_top_right.img, cmap='gray', vmin=0, vmax=255)\n",
+    "_fig.add_subplot(2, 2, 3)\n",
+    "plt.imshow(roi_bottom_left.img, cmap='gray', vmin=0, vmax=255)\n",
+    "_fig.add_subplot(2, 2, 4)\n",
+    "plt.imshow(roi_bottom_right.img, cmap='gray', vmin=0, vmax=255)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "corners = roi_top_left.edge_corner_detect()"
    ]
   },
   {
@@ -485,7 +528,19 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(fix1_class.img)"
+    "plt.imshow(fix1_class.img)\n",
+    "plt.savefig('crop.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(fix1_class.img[10:19, 0:9])"
    ]
   },
   {
@@ -531,7 +586,19 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(map_image.img)"
+    "plt.imshow(map_image.img)\n",
+    "plt.savefig('map.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "Counter"
    ]
   },
   {
@@ -622,6 +689,13 @@
    "source": [
     "plt.imshow(res2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
