Fixing HSV color interactive slider

--- a/walls.ipynb
+++ b/walls.ipynb
@@ -10,6 +10,7 @@
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
+    "from ipywidgets import interactive\n",
     "from matplotlib import pyplot as plt\n",
     "import ipywidgets as widgets\n",
     "from image import Image, OriginPoint\n",
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -198,70 +199,19 @@
    },
    "outputs": [],
    "source": [
-    "sliders_low = [widgets.IntSlider(value=0, min=0, max=180 if desc == 'h' else 255, step=1, description=desc) for desc in ('h', 's', 'v')]\n",
-    "sliders_high = [widgets.IntSlider(value=0, min=0, max=180 if desc == 'h' else 255, step=1, description=desc) for desc in ('h', 's', 'v')]\n",
-    "vbox = widgets.VBox([\n",
-    "    widgets.HBox(sliders_low),\n",
-    "    widgets.HBox(sliders_high),\n",
-    "])\n",
-    "vbox"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Masking function. It diretly modifies the parameter. There is no need to use the return value"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Function that is called when slider value changes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def make_on_change(image):\n",
-    "    def on_hsv_change(_):\n",
-    "        _mask = cv.inRange(\n",
-    "            image,\n",
-    "            (int(sliders_low[0].value), int(sliders_low[1].value), int(sliders_low[2].value)),\n",
-    "            (int(sliders_high[0].value), int(sliders_high[1].value), int(sliders_high[2].value)),\n",
+    "def update_hsv(Hue):\n",
+    "    thresh1 = cv.inRange(hsv_img,\n",
+    "            (Hue - 20, 190, 150),\n",
+    "            (Hue + 20, 255, 255),\n",
     "        )\n",
-    "        plt.imshow(_mask)\n",
-    "    return on_hsv_change"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "make_on_change(None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "[slider.observe(make_on_change(hsv_img)) for slider in sliders_low + sliders_high]"
+    "    \n",
+    "    plt.imshow(thresh1,plt.get_cmap('gray'))\n",
+    "    plt.title(\"Interactive Threshold\")\n",
+    "    plt.show()\n",
+    "    \n",
+    "interactive(update_hsv, Hue=(10, 245, 1))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -271,7 +221,9 @@
     "tags": []
    },
    "source": [
-    "# Create the mask"
+    "# Create the mask\n",
+    "\n",
+    "Now use there parameters to updte your constants that you will use further in the code."
    ]
   },
   {
