code: Cleanup solution

--- a/walls.ipynb
+++ b/walls.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "import cv2 as cv\n",
     "from matplotlib import pyplot as plt\n",
-    "import ipywidgets as widgets\n",
+    "from ipywidgets import interactive\n",
     "import image\n",
     "import mapa\n",
     "\n",
@@ -50,13 +50,8 @@
    },
    "outputs": [],
    "source": [
-    "img = cv.imread('./images/real01.jpg')\n",
-    "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
-    "(img_height, img_width, _) = img.shape\n",
-    "img_ratio = 1000 / img_width\n",
-    "#img = cv.resize(img, (1000, int(img_height * img_ratio)), interpolation=cv.INTER_AREA)\n",
-    "#print('h: {}, w: {}'.format(int(img_height * img_ratio), 1000))\n",
-    "print('h: {}, w: {}'.format(img_height, img_width))"
+    "img = cv.imread('./images/walls.jpg')\n",
+    "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)"
    ]
   },
   {
@@ -154,33 +149,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "for i, col in enumerate(('r', 'g', 'b')):\n",
-    "    hist_color_rgb = cv.calcHist([img], [i], None, [256], [0, 256])\n",
-    "    plt.plot(hist_color_rgb, color=col)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hsv_img = cv.cvtColor(undistortedImg, cv.COLOR_RGB2HSV)\n",
-    "for i, col in enumerate(('r', 'g', 'b')):\n",
-    "    hist_color_hsv = cv.calcHist([hsv_img], [i], None, [256], [0, 256])\n",
-    "    plt.plot(hist_color_hsv, color=col)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -198,70 +166,30 @@
    },
    "outputs": [],
    "source": [
-    "sliders_low = [widgets.IntSlider(value=0, min=0, max=180 if desc == 'h' else 255, step=1, description=desc) for desc in ('h', 's', 'v')]\n",
-    "sliders_high = [widgets.IntSlider(value=0, min=0, max=180 if desc == 'h' else 255, step=1, description=desc) for desc in ('h', 's', 'v')]\n",
-    "vbox = widgets.VBox([\n",
-    "    widgets.HBox(sliders_low),\n",
-    "    widgets.HBox(sliders_high),\n",
-    "])\n",
-    "vbox"
+    "hsv_img = cv.cvtColor(img, cv.COLOR_RGB2HSV)\n",
+    "def mask(h, sl, vl, sh, vh):\n",
+    "    m = cv.inRange(\n",
+    "        hsv_img,\n",
+    "        (h-10, sl, vl),\n",
+    "        (h+10, sh, vh),\n",
+    "    )\n",
+    "    plt.imshow(m)"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Masking function. It diretly modifies the parameter. There is no need to use the return value"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Function that is called when slider value changes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
    "outputs": [],
    "source": [
-    "def make_on_change(image):\n",
-    "    def on_hsv_change(_):\n",
-    "        _mask = cv.inRange(\n",
-    "            image,\n",
-    "            (int(sliders_low[0].value), int(sliders_low[1].value), int(sliders_low[2].value)),\n",
-    "            (int(sliders_high[0].value), int(sliders_high[1].value), int(sliders_high[2].value)),\n",
-    "        )\n",
-    "        plt.imshow(_mask)\n",
-    "    return on_hsv_change"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "make_on_change(None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "[slider.observe(make_on_change(hsv_img)) for slider in sliders_low + sliders_high]"
+    "interactive(\n",
+    "    mask,\n",
+    "    h=(0+10, 179-10),\n",
+    "    sl=(0, 255),\n",
+    "    vl=(0, 255),\n",
+    "    sh=(0, 255),\n",
+    "    vh=(0, 255),\n",
+    ")"
    ]
   },
   {
@@ -282,11 +210,8 @@
    },
    "outputs": [],
    "source": [
-    "WHITE_LOWER = (0, 225, 225)\n",
-    "WHITE_UPPER = (180, 255, 255)\n",
-    "\n",
-    "BLUE_LOWER = (100, 190, 150)\n",
-    "BLUE_UPPER = (110, 255, 220)"
+    "BLUE_LOWER = (100, 144, 144)\n",
+    "BLUE_UPPER = (120, 255, 255)"
    ]
   },
   {
@@ -344,57 +269,6 @@
    },
    "outputs": [],
    "source": [
-    "roi_top_left, roi_top_right, roi_bottom_left, roi_bottom_right = image_class.get_rois()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "_fig = plt.figure()\n",
-    "_fig.add_subplot(2, 2, 1)\n",
-    "plt.imshow(roi_top_left.img, cmap='gray', vmin=0, vmax=255)\n",
-    "_fig.add_subplot(2, 2, 2)\n",
-    "plt.imshow(roi_top_right.img, cmap='gray', vmin=0, vmax=255)\n",
-    "_fig.add_subplot(2, 2, 3)\n",
-    "plt.imshow(roi_bottom_left.img, cmap='gray', vmin=0, vmax=255)\n",
-    "_fig.add_subplot(2, 2, 4)\n",
-    "plt.imshow(roi_bottom_right.img, cmap='gray', vmin=0, vmax=255)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "corners = image_class.edge_corner_detect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corners"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "hsv_class = image_class.rgb_to_hsv()"
    ]
   },
@@ -417,19 +291,7 @@
    },
    "outputs": [],
    "source": [
-    "CYAN_LOWER = (85, 205, 190)\n",
-    "CYAN_UPPER = (95, 255, 255)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "mask_class = hsv_class.make_mask(CYAN_LOWER, CYAN_UPPER)"
+    "mask_class = hsv_class.make_mask(BLUE_LOWER, BLUE_UPPER)"
    ]
   },
   {
@@ -537,8 +399,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(fix1_class.img)\n",
-    "plt.savefig('crop.jpg')"
+    "plt.imshow(fix1_class.img)"
    ]
   },
   {
@@ -726,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
