--- a/walls.ipynb
+++ b/walls.ipynb
@@ -50,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "img = cv.imread('./images/walls.jpg')\n",
+    "img = cv.imread('../walls.jpg')\n",
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)"
    ]
   },
@@ -182,9 +182,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.imshow(hsv_img[:,:,0])\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "interactive(\n",
     "    mask,\n",
-    "    h=(0+10, 179-10),\n",
+    "    h=(0, 179),\n",
     "    sl=(0, 255),\n",
     "    vl=(0, 255),\n",
     "    sh=(0, 255),\n",
@@ -210,8 +220,8 @@
    },
    "outputs": [],
    "source": [
-    "BLUE_LOWER = (100, 144, 144)\n",
-    "BLUE_UPPER = (120, 255, 255)"
+    "BLUE_LOWER = (90, 95, 87)\n",
+    "BLUE_UPPER = (110, 255, 255)"
    ]
   },
   {
@@ -244,7 +254,7 @@
     "image_class.set_areas(\n",
     "    image.Area(50, 150),\n",
     "    image.Area(350, 450),\n",
-    "    image.Area(150, 250),\n",
+    "    image.Area(125, 225),\n",
     "    image.Area(450, 550),\n",
     ")\n",
     "image_class.set_origin_points((0, 99), (0, 99))"
@@ -303,6 +313,24 @@
    "outputs": [],
    "source": [
     "plt.imshow(mask_class.img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.max(mask_class.img))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(mask_class.img.flatten())[0].size"
    ]
   },
   {
@@ -405,6 +433,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plt.imshow(cv.cvtColor(fix1_class.img, cv.COLOR_RGB2HSV)[:,:,0])\n",
+    "plt.imshow(fix1_class.img[:,:,0] > 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -456,116 +494,8 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(map_image.img)\n",
-    "plt.savefig('map.jpg')"
+    "plt.imshow(map_image.img)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "Counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "kmeans_whole = np.float32(fix1_class.img.reshape((-1, 3)))\n",
-    "criteria = (cv.TERM_CRITERIA_EPS + cv.TERM_CRITERIA_MAX_ITER, 10, 1.0)\n",
-    "n_clusters = 6\n",
-    "ret, label, center = cv.kmeans(kmeans_whole, n_clusters, None, criteria, 10, cv.KMEANS_RANDOM_CENTERS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "center = np.uint8(center)\n",
-    "res = center[label.flatten()]\n",
-    "res2 = res.reshape((fix1_class.img.shape))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.imshow(res2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# WIP: Not for use\n",
-    "crop_img = fix1_class.img[10*2:10*3-1, 10*2:10*3-1]\n",
-    "kmeans_img = np.float32(crop_img.reshape((-1, 3)))\n",
-    "criteria = (cv.TERM_CRITERIA_EPS + cv.TERM_CRITERIA_MAX_ITER, 10, 1.0)\n",
-    "n_clusters = 1\n",
-    "ret,label,center=cv.kmeans(kmeans_img,n_clusters,None,criteria,10,cv.KMEANS_RANDOM_CENTERS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "center = np.uint8(center)\n",
-    "res = center[label.flatten()]\n",
-    "res2 = res.reshape((crop_img.shape))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "center"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.imshow(res2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
